syntax = "proto3";
option go_package = "lqm.demo.grpc/server/hello";
option java_package = "lqm.demo.grpc.server.hello";
service HelloService {
  rpc SayHello(HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}